--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --cinza-secundario: #C0C0C0; 
     --botao-azul: #167BF7; 
     --cor-de-fundo: #00030c;
-    --fonte-prncipal: "Inter" 
+    --fonte-principal: "Inter" 
 
 }
 
@@ -75,7 +75,7 @@ body {
    color: var(--branco-principal);
    margin: 0 10em;
  }
-
+ 
  .secundario__titulo {
    font-size: 48px;
    font-weight: 700;
@@ -156,3 +156,30 @@ body {
  .lista__link a:active {
    color: greenyellow;
  }
+
+ @media screen and  (max-width: 768px) {
+   .container { display: block;
+    background-image: none;}
+ 
+
+.container__caixa {
+   margin: 2em 2em;
+}
+
+.container__imagem {
+   width: 50vw;
+}
+
+.secundario {
+   margin: 0;
+   text-align: center;
+}
+.secundario__imagem {
+   width: 50vw;
+}
+
+.dispositivos__lista {
+   display: block;
+}
+ }   
+ 
